--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fasohlabs.homie">
+    package="com.fasohlabs.unrd">
 
     <application
         android:allowBackup="true"
@@ -8,10 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name="com.fasohlabs.UnrdApp"
         android:theme="@style/Theme.AppTheme">
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.fasohlabs.unrd.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.AppTheme"
             >
