--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,9 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: set up JDK 1.8
+    - name: set up JDK 11
       uses: actions/setup-java@v1
       with:
         java-version: 11
+    - name: Code quality checks
+      run: ./gradlew ktlintCheck && ./gradlew detekt
     - name: Build with Gradle
       run: ./gradlew build
