--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,27 +3,26 @@
     package="com.fasohlabs.unrd">
 
     <application
+        android:name=".UnrdApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name="com.fasohlabs.UnrdApp"
         android:theme="@style/Theme.AppTheme">
-
         <activity
-            android:name="com.fasohlabs.unrd.MainActivity"
+            android:name=".ui.MediaPreviewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppTheme"
-            >
-
+            android:theme="@style/Theme.AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
