Updated readme and added ommitted mockito files

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Code quality checks
       run: ./gradlew ktlintCheck && ./gradlew detekt
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./coverage.sh
